--- a/index.html
+++ b/index.html
@@ -178,5 +178,11 @@
         <li><a href="#">Suppliers</a></li>
     </ul>
 </footer>
+       <footer>
+        <nav class="navbar fixed-bottom navbar-dark navbar-transparent justify-content-center">
+          <p class="h6">Created By Samson P G</p>
+        </nav>
+        
+      </footer>
   </body>
 </html>
